按粗估 token 裁剪上下文，并允许环境变量覆盖步数与历史上限。
Co-authored-by: Cursor <cursoragent@cursor.com>